--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,19 @@ spring:
     name: pharma-care
   datasource:
     url: jdbc:postgresql://localhost:5433/bd_carrito_compras
-    #username: carrito_compra
     username: pharma_care
     password: CarritoCompra123*
+    hikari:
+      connection-timeout: 20000
+      minimum-idle: 5
+      maximum-pool-size: 20
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      auto-commit: false
   jpa:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
 
 # JWT Configuration
 jwt:
